fix(caliobase): add delete me method
